--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,27 @@
  *= require_tree .
  *= require_self
  */
+
+ body{
+  margin: 15px;
+ }
+
+ .flex{
+  display: flex;
+ }
+
+.letter-box{
+  border: solid 1px grey;
+  color: white;
+  font-size: 30px;
+  padding: 10px;
+  background-color: #3498DC;
+  margin: 12px;
+  width: 80px;
+  height: 80px;
+  text-align: center;
+}
+
+.input{
+  margin-top: 20px;
+}
